--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bulma": "^0.9.4",
+    "classnames": "^2.5.1",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-button": "^1.2.1",
